--- a/GamificacaoPessoal/manifest.json
+++ b/GamificacaoPessoal/manifest.json
@@ -1,21 +1,22 @@
 {
-    "name": "Gamificação DEV",
-    "short_name": "Gamificação DEV",
-    "description": "Ferramenta de gamificação para desenvolvimento pessoal e profissional.",
-    "start_url": "/index.html",
-    "display": "standalone",
-    "background_color": "#f4f7f6",
-    "theme_color": "#28a745",
-    "icons": [
-        {
-            "src": "icons/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/icon-512x512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "Nome do Seu App",
+  "short_name": "Seu App",
+  "description": "Descrição do seu PWA",
+  "start_url": "/app/GamificacaoPessoal/index.html", 
+  "scope": "/app/GamificacaoPessoal/",               
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
+  "icons": [
+    {
+      "src": "icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
