--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "name": "Gamificação DEV",
     "short_name": "Game DEV",
     "description": "Seu aplicativo PWA para gamificação pessoal e organização de tarefas de desenvolvimento.",
-    "start_url": "/app/GamificacaoPessoal/index.html",
-    "scope": "/app/GamificacaoPessoal/",
+    "start_url": "/GamificacaoPessoal/index.html",
+    "scope": "/GamificacaoPessoal/",
     "display": "standalone",
     "orientation": "portrait",
     "background_color": "#ffffff",
