--- a/manifest.json
+++ b/manifest.json
@@ -2,63 +2,63 @@
     "name": "Gamificação DEV",
     "short_name": "Game DEV",
     "description": "Seu aplicativo PWA para gamificação pessoal e organização de tarefas de desenvolvimento.",
-    "start_url": "/app/",
-    "scope": "/app/",
+    "start_url": "/",
+    "scope": "/",
     "display": "standalone",
     "orientation": "portrait",
     "background_color": "#ffffff",
     "theme_color": "#007bff",
     "icons": [
         {
-            "src": "/app/icons/icon-72x72.png",
+            "src": "/icons/icon-72x72.png",
             "sizes": "72x72",
             "type": "image/png"
         },
         {
-            "src": "/app/icons/icon-96x96.png",
+            "src": "/icons/icon-96x96.png",
             "sizes": "96x96",
             "type": "image/png"
         },
         {
-            "src": "/app/icons/icon-128x128.png",
+            "src": "/icons/icon-128x128.png",
             "sizes": "128x128",
             "type": "image/png"
         },
         {
-            "src": "/app/icons/icon-144x144.png",
+            "src": "/icons/icon-144x144.png",
             "sizes": "144x144",
             "type": "image/png"
         },
         {
-            "src": "/app/icons/icon-152x152.png",
+            "src": "/icons/icon-152x152.png",
             "sizes": "152x152",
             "type": "image/png"
         },
         {
-            "src": "/app/icons/icon-192x192.png",
+            "src": "/icons/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/app/icons/icon-384x384.png",
+            "src": "/icons/icon-384x384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "/app/icons/icon-512x512.png",
+            "src": "/icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
     ],
     "screenshots": [
         {
-            "src": "/app/screenshots/screenshot1.png",
+            "src": "/screenshots/screenshot1.png",
             "sizes": "1280x800",
             "type": "image/png",
             "form_factor": "wide"
         },
         {
-            "src": "/app/screenshots/screenshot2.png",
+            "src": "/screenshots/screenshot2.png",
             "sizes": "800x1280",
             "type": "image/png",
             "form_factor": "narrow"
