Adicionar ícone ms-icon-144x144.png duplicado no manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -66,6 +66,11 @@
             "src": "icons/ms-icon-144x144.png",
             "sizes": "144x144",
             "type": "image/png"
+        },
+        {
+            "src": "icons/ms-icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png"
         }
     ]
 }
