--- a/manifest.json
+++ b/manifest.json
@@ -71,6 +71,11 @@
             "src": "icons/ms-icon-144x144.png",
             "sizes": "144x144",
             "type": "image/png"
+        },
+        {
+            "src": "/app/icons/icon-144x144.png",
+            "sizes": "144x144",
+            "type": "image/png"
         }
     ]
 }
