--- a/manifest.json
+++ b/manifest.json
@@ -8,17 +8,17 @@
     "theme_color": "#28a745",
     "icons": [
         {
-            "src": "icons/icon-72x72.png",
+            "src": "/app/icons/icon-72x72.png",
             "sizes": "72x72",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-96x96.png",
+            "src": "/app/icons/icon-96x96.png",
             "sizes": "96x96",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-128x128.png",
+            "src": "/app/icons/icon-128x128.png",
             "sizes": "128x128",
             "type": "image/png"
         },
@@ -28,53 +28,28 @@
             "type": "image/png"
         },
         {
-            "src": "icons/icon-152x152.png",
+            "src": "/app/icons/icon-152x152.png",
             "sizes": "152x152",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-192x192.png",
+            "src": "/app/icons/icon-192x192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-384x384.png",
+            "src": "/app/icons/icon-384x384.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-512x512.png",
+            "src": "/app/icons/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
         },
         {
-            "src": "icons/apple-touch-icon.png",
+            "src": "/app/icons/apple-touch-icon.png",
             "sizes": "180x180",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/favicon-32x32.png",
-            "sizes": "32x32",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/favicon-16x16.png",
-            "sizes": "16x16",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/ms-icon-144x144.png",
-            "sizes": "144x144",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/ms-icon-144x144.png",
-            "sizes": "144x144",
-            "type": "image/png"
-        },
-        {
-            "src": "/app/icons/icon-144x144.png",
-            "sizes": "144x144",
             "type": "image/png"
         }
     ]
