--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
     "display": "standalone",
     "background_color": "#f8f9fa",
     "theme_color": "#28a745",
+    "orientation": "any", 
     "icons": [
         {
             "src": "/app/icons/icon-72x72.png",
